// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an svg, g, path 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={100}
  bbWidth={100}
  focusable={false}
  height={100}
  meetOrSlice={0}
  minX={145}
  minY={50}
  style={
    Object {
      "backgroundColor": "transparent",
      "borderWidth": 0,
      "flex": 0,
      "height": 100,
      "width": 100,
    }
  }
  vbHeight={120}
  vbWidth={108}
  version="1.1"
  width={100}
>
  <RNSVGGroup>
    <RNSVGGroup
      fillRule={0}
      propList={
        Array [
          "fill",
          "fillRule",
          "stroke",
          "strokeWidth",
        ]
      }
      strokeWidth={1}
    >
      <RNSVGPath
        d="4872173116d82a1a379dbcc06ad3c243"
        fill={-16777216}
        propList={
          Array [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`2. a path with no fill 1`] = `
<RNSVGPath
  d="4872173116d82a1a379dbcc06ad3c243"
  propList={
    Array [
      "fill",
    ]
  }
/>
`;

exports[`3. a polygon 1`] = `
<RNSVGPath
  d="f0010c2bbdef3c3bedb66db380f29ac6"
  fill={-16776961}
  propList={
    Array [
      "fill",
      "stroke",
    ]
  }
  stroke={-65536}
/>
`;

exports[`4. a rect 1`] = `
<RNSVGRect
  fill={-16777216}
  fillOpacity={0.4}
  height="100"
  propList={
    Array [
      "fill",
      "fillOpacity",
      "stroke",
      "strokeWidth",
    ]
  }
  stroke={-1}
  strokeWidth={8}
  width="100"
  x="5"
  y="10"
/>
`;
